add module-resolver and delete .ts extensions

--- a/js/.babelrc
+++ b/js/.babelrc
@@ -13,5 +13,13 @@
         "runtime": "automatic"
       }
     ]
+  ],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["./"],
+      "alias": {
+        "@components": "./src/components"
+      } 
+    }]
   ]
 }
