--- a/js/package.json
+++ b/js/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "core-js": "^3.26.1",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
